prevent line wrapping in DownloadButton

--- a/frameworks/projects/MXRoyale/src/main/resources/defaults.css
+++ b/frameworks/projects/MXRoyale/src/main/resources/defaults.css
@@ -291,6 +291,7 @@ DownloadButton
 {
 	border: solid 1px #000;
 	text-decoration: none;
+	white-space: nowrap;
 }
 
 FormItem
